2006-05-11  Alex Roitman  <shura@gramps-project.org>
	* src/PeopleModel.py (_MARKER_COL): Correct column numbers.

2006-05-10  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_ReadXML.py (GrampsParser): Use UpdateCallback.
	* src/GrampsDb/_ReadGedcom.py (GedcomParser): Use UpdateCallback.
	* src/GrampsDb/_DbUtils.py (db_copy): Use UpdateCallback class.
	(get_total): Add function, remove unneeded class.
	* src/BasicUtils.py: Add module.
	(UpdateCallback.update_real): Allow optional argument; 
	(UpdateCallback.set_total): Add method.
	* src/Makefile.am (gdir_PYTHON): Add new file.
	* src/DataViews/_MediaView.py (edit): Handle the exception.
	* src/plugins/BookReport.py (__init__): Fix url.
	* src/plugins/ChangeTypes.py (run_tool): Disable/enable signals.
	* src/plugins/ReorderIds.py (__init__): Disable/enable signals.
	* src/plugins/PatchNames.py (on_ok_clicked): Start transaction
	only if doing the changes; disable/enable signals.
	* src/plugins/SoundGen.py: Fix WM.

2006-05-10  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_PersonView.py: support for inverted searchs
	* src/PeopleModel.py: support for inverted searchs
	* src/DisplayModel.py: support for inverted searchs
	* src/PageView.py: support for inverted searchs, correct col index
	* src/Filters/_SearchBar.py: support for inverted searchs, change
	button order
	* src/Filters/_SearchFilter.py: support for inverted searchs

2006-05-10  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_ReadGedcom.py (func_person_attr): Typos.

2006-05-10  Don Allingham  <don@gramps-project.org>
	* src/ViewManager.py: remove debug statement
	* src/PeopleModel.py: use SearchFilter
	* src/DisplayModels.py: handle search filter
	* src/PageView.py: search bar support
	* src/Filters/_SearchBar.py: remove SearchFilter to separate file, 
	fix status bar message, improved buttons.
	* src/Filters/_SearchFilter.py: added
	* src/Filters/__init__.py: added SearchBar
